Restore code to refresh scrolledContentSize between horizontal and vertical scrollbar manipulation.  b=330673  r+sr=roc